--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -11,14 +11,13 @@ body {
   position: absolute;
   width: calc(100% - 20px);
   max-width: 800px;
-  height: 500px;
+  height: 90%;
   border-radius: 10px;
   background-color: #fff;
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-  background-color: #f8f8f8;
   overflow: hidden;
 }
 
@@ -60,7 +59,7 @@ body {
   list-style: none;
   padding: 20px 10px 0 10px;
   margin: 0;
-  height: 347px;
+  height: 80%;
   overflow: scroll;
 }
 .messages .message {
